--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,8 @@
                 </p>
                 <a href="pages/work.html" class="btn btn-outline">My Projects</a>
             </div> 
-            <div class="about-me card">
-                <h2>Hi! :)</h2>
-                <!-- insert my photo here later-->
-                <p>Picture is here</p>
+            <div class="about-me-pic trans-card">
+                <img class="myphoto" src="img/myphoto.png" alt="">
             </div>
 
 
