--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -26,24 +26,35 @@
     <!--introduction-->
     <section class="features-sub-head bg-light py-3">
         <div class="container grid">
-            <div>
-                <h1 class="md">My projects</h1>
+            <div class="introduction-text">
+                
                 <p>
+                    My skills demonstrated by my works! Have fun!
+                    My skills demonstrated by my works! Have fun!
                     My skills demonstrated by my works! Have fun!
                 </p>
             </div>
-            <img src="images/server2.png" alt="">
         </div>
     </section>
 
     <!-- projects -->
     <section>
         <div class="container grid grid-3">
-            <div class="card flex">
-                <a href="#"><img src="../img/project-portfolio.png" alt="" style="width:200px;height:160px;"></a>
+            <div class="card">
+                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Vintage Fashion</h2>
             </div> 
-    </section>
+            <div class="card">
+                <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Rachel's Portfolio</h2>
+            </div> 
+            <div class="card">
+                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Domimo Pizza</h2>
+            </div> 
 
+    </section>
+ 
 
 
     <!-- footer section -->
