finish contact page

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -23,11 +23,36 @@
             </nav>
         </div>
     </div>
-    <section>
 
-    </section>
+<!--introduction-->
+<section class="bg-light py-3">
+    <div class="container">
+        <div class="contact-me-text">
+            <h2 class="text-center">Leave me a message</h2>
+        </div>
+    </div>
+</section>  
 
+<!--send me message-->
+<section class="contact-flex">
+  <div class="contact">
+  
 
+    <form action="https://formspree.io/f/xnqleadb" method="POST">
+        <div>
+            <input type="email" name="email" placeholder="Your Email Address">
+        </div>
+
+        <div>
+            <textarea name="message" placeholder="Your Message" ></textarea>
+        </div>
+  
+            <button class="btn" type="submit">Send</button>
+
+    </form>
+  
+</div>
+</section>
 
     <!-- footer section -->
     <footer class="footer bg-dark py-5">
