--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <!--introduction-->
-    <section class="features-sub-head bg-light py-3">
+    <section class="bg-light py-3">
         <div class="container grid">
             <div class="introduction-text">
                 
