--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 </p>
                 <a href="pages/work.html" class="btn btn-outline">My Projects</a>
             </div> 
-            <div class="about-me-pic trans-card">
+            <div class="about-me-pic">
                 <img class="myphoto" src="img/myphoto.png" alt="">
             </div>
 
@@ -98,12 +98,12 @@
             </div>
             <div class="social">
                 <!-- icons from fontawesome.com/ -->
-                <a href="https://github.com/xinyirachel"><i class="fab fa-github fa-3x"></i></a>
-                <a href="https://www.facebook.com/xinyi.wang.5283"><i class="fab fa-facebook fa-3x"></i></a>
-                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fab fa-instagram fa-3x"></i></a>
+                <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
+                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i class="fa-brands fa-linkedin fa-3x"></i></i></a>
+                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fa-brands fa-instagram fa-3x"></i></a>
             </div>
             <div>
-                <a href="work.html" class="btn">My Resume</a>
+                <a href="./Resume.pdf" class="btn">My Resume</a>
             </div>
         </div>
     </footer>
