--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -66,12 +66,12 @@
             </div>
             <div class="social">
                 <!-- icons from fontawesome.com/ -->
-                <a href="https://github.com/xinyirachel"><i class="fab fa-github fa-3x"></i></a>
-                <a href="https://www.facebook.com/xinyi.wang.5283"><i class="fab fa-facebook fa-3x"></i></a>
-                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fab fa-instagram fa-3x"></i></a>
+                <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
+                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i class="fa-brands fa-linkedin fa-3x"></i></i></a>
+                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fa-brands fa-instagram fa-3x"></i></a>
             </div>
             <div>
-                <a href="work.html" class="btn">My Resume</a>
+                <a href="../Resume.pdf" class="btn">My Resume</a>
             </div>
         </div>
     </footer>
