--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,8 @@
     <section class="about-me">
         <div class="container grid">
             <div class="about-me-text">
-                <h1>Easier Deployment-Web Developer</h1>
-                <p>Hi I am Rachel. A passionate web dev.
-                   Hi I am Rachel. A passionate web dev.
-                   Hi I am Rachel. A passionate web dev.
+                <h1>Hi, I am Rachel :)</h1>
+                <p>CoderAcademy Student currently pursuing a career. <br> I am looking for front end development, full-stack development, or UX/UI design positions.
                 </p>
                 <a href="pages/work.html" class="btn btn-outline">My Projects</a>
             </div> 
