--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -29,9 +29,7 @@
             <div class="introduction-text">
                 
                 <p>
-                    My skills demonstrated by my works! Have fun!
-                    My skills demonstrated by my works! Have fun!
-                    My skills demonstrated by my works! Have fun!
+                    The following projects demonstrated my skills.
                 </p>
             </div>
         </div>
@@ -41,7 +39,7 @@
     <section>
         <div class="container grid grid-3">
             <div class="card">
-                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img" src="../img/project-vintagefashion.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Vintage Fashion</h2>
             </div> 
             <div class="card">
@@ -49,9 +47,22 @@
                 <h2 class="text-left">Rachel's Portfolio</h2>
             </div> 
             <div class="card">
-                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img" src="../img/project-domimopizza.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Domimo Pizza</h2>
             </div> 
+            <div class="card">
+                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Coming Soon</h2>
+            </div> 
+            <div class="card">
+                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Coming Soon</h2>
+            </div>
+            <div class="card">
+                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Coming Soon</h2>
+            </div>
+
 
     </section>
  
