add new project

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css" integrity="sha384-bCeHZSTzruQVWNMCk1IfkNsI1H6hNHuh5TulSaPpk800i7CC6f8u7XisjUHyP7Iu" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css" integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
     <!-- from cdnjs.com  library called font-awesome allow me to use font awesome classes to create icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rachel Portfolio</title>
@@ -35,8 +35,8 @@
     <section class="about-me">
         <div class="container grid">
             <div class="about-me-text">
-                <h1>Hi, I am Rachel :)</h1>
-                <p>CoderAcademy Student currently pursuing a career. <br> I am looking for front end development, full-stack development, or UX/UI design positions.
+                <h1>I am Rachel, a web developer from Australia.</h1>
+                <p>I am interested in Code, Design and anything I can create from scratch. <br>Looking for front end development positions now.
                 </p>
                 <a href="pages/work.html" class="btn btn-outline">My Projects</a>
             </div> 
@@ -60,28 +60,43 @@
 
         <div class="container flex">
             <div class="card">
-                <img src="img/html.png" alt="">
+                <img class=svg src="img/html5.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/css.png" alt="">
+                <img class=svg src="img/css.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/javascript.png" alt="">
+                <img class=svg src="img/bootstrap.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/react.png" alt="">
+                <img class=svg src="img/javascript.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/ruby.png" alt="">
+                <img class=svg src="img/react.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/rails.png" alt="">
+                <img class=svg src="img/materialui.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/uiux.png" alt="">
+                <img class=svg src="img/nodejs.svg" alt="">
             </div>
             <div class="card">
-                <img src="img/git.png" alt="">
+                <img class=svg src="img/express.svg" alt="">
+            </div>
+            <div class="card">
+                <img class=svg src="img/mongodb.svg" alt="">
+            </div>
+            <div class="card">
+                <img class=svg src="img/ruby.svg" alt="">
+            </div>
+            <div class="card">
+                <img class=svg src="img/rails.svg" alt="">
+            </div>
+            <div class="card">
+                <img class=svg src="img/postgresql.svg" alt="">
+            </div>
+            <div class="card">
+                <img class=svg src="img/git.svg" alt="">
             </div>
     </section>
 
