--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-bCeHZSTzruQVWNMCk1IfkNsI1H6hNHuh5TulSaPpk800i7CC6f8u7XisjUHyP7Iu" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
     <!-- from cdnjs.com  library called font-awesome allow me to use font awesome classes to create icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rachel Portfolio</title>
@@ -29,7 +29,7 @@
             <div class="introduction-text">
                 
                 <p>
-                    The following projects demonstrated my skills.
+                    This is a super collection of all the websites and apps I created.
                 </p>
             </div>
         </div>
@@ -51,8 +51,8 @@
                 <h2 class="text-left">Domimo Pizza</h2>
             </div> 
             <div class="card">
-                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
-                <h2 class="text-left">Coming Soon</h2>
+                <a href="#"><img class="project-img" src="../img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Simple Note</h2>
             </div> 
             <div class="card">
                 <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
