--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-bCeHZSTzruQVWNMCk1IfkNsI1H6hNHuh5TulSaPpk800i7CC6f8u7XisjUHyP7Iu" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
     <!-- from cdnjs.com  library called font-awesome allow me to use font awesome classes to create icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rachel Portfolio</title>
@@ -25,7 +25,7 @@
     </div>
 
 <!--introduction-->
-<section class="bg-light py-3">
+<section class="py-3">
     <div class="container">
         <div class="contact-me-text">
             <h2 class="text-center">Leave me a message</h2>
