add new project

--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -51,7 +51,7 @@
                 <h2 class="text-left">Domimo Pizza</h2>
             </div> 
             <div class="card">
-                <a href="#"><img class="project-img" src="../img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/Simple-Note"><img class="project-img" src="../img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Simple Note</h2>
             </div> 
             <div class="card">
