add new project

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <div class="container grid">
             <div class="about-me-text">
                 <h1>I am Rachel, a web developer from Australia.</h1>
-                <p>I am interested in Code, Design and anything I can create from scratch. <br>Looking for front end development positions now.
+                <p>I am interested in Code, Design and anything I can create from scratch.
                 </p>
                 <a href="pages/work.html" class="btn btn-outline">My Projects</a>
             </div> 
