--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/style.css"
+        integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
     <!-- from cdnjs.com  library called font-awesome allow me to use font awesome classes to create icon  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rachel Portfolio</title>
 </head>
+
 <body>
     <!-- navbar -->
     <div class="navbar">
@@ -18,41 +23,41 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./work.html">Work</a></li>
                     <li><a href="./contact.html">Contact</a></li>
-                    
+
                 </ul>
             </nav>
         </div>
     </div>
 
-<!--introduction-->
-<section class="py-3">
-    <div class="container">
-        <div class="contact-me-text">
-            <h2 class="text-center">Leave me a message</h2>
+    <!--introduction-->
+    <section class="py-3">
+        <div class="container">
+            <div class="contact-me-text">
+                <h2 class="text-center">Leave me a message</h2>
+            </div>
         </div>
-    </div>
-</section>  
+    </section>
 
-<!--send me message-->
-<section class="contact-flex">
-  <div class="contact">
-  
+    <!--send me message-->
+    <section class="contact-flex">
+        <div class="contact">
 
-    <form action="https://formspree.io/f/xnqleadb" method="POST">
-        <div>
-            <input type="email" name="email" placeholder="Your Email Address">
+
+            <form action="https://formspree.io/f/xnqleadb" method="POST">
+                <div>
+                    <input type="email" name="email" placeholder="Your Email Address">
+                </div>
+
+                <div>
+                    <textarea name="message" placeholder="Your Message"></textarea>
+                </div>
+
+                <button class="btn" type="submit">Send</button>
+
+            </form>
+
         </div>
-
-        <div>
-            <textarea name="message" placeholder="Your Message" ></textarea>
-        </div>
-  
-            <button class="btn" type="submit">Send</button>
-
-    </form>
-  
-</div>
-</section>
+    </section>
 
     <!-- footer section -->
     <footer class="footer bg-dark py-5">
@@ -64,8 +69,10 @@
             <div class="social">
                 <!-- icons from fontawesome.com/ -->
                 <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
-                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i class="fa-brands fa-linkedin fa-3x"></i></i></a>
-                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i
+                        class="fa-brands fa-linkedin fa-3x"></i></i></a>
+                <a href="https://www.instagram.com/timelessummer/?hl=en"><i
+                        class="fa-brands fa-instagram fa-3x"></i></a>
             </div>
             <div>
                 <a href="../Resume.pdf" class="btn">My Resume</a>
