--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css" integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/style.css"
+        integrity="sha384-ImIWxkhVauzG8ka25UD5VSXGVYxnFbbRwB0nex074DVcbXKaIoLZQAcfnGZy0ocv" crossorigin="anonymous">
     <!-- from cdnjs.com  library called font-awesome allow me to use font awesome classes to create icon  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Rachel Portfolio</title>
 </head>
+
 <body>
     <!-- navbar -->
     <div class="navbar">
@@ -18,7 +23,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./work.html">Work</a></li>
                     <li><a href="./contact.html">Contact</a></li>
-                    
+
                 </ul>
             </nav>
         </div>
@@ -27,7 +32,7 @@
     <section class="bg-light py-3">
         <div class="container grid">
             <div class="introduction-text">
-                
+
                 <p>
                     This is a super collection of all the websites and apps I created.
                 </p>
@@ -39,33 +44,39 @@
     <section>
         <div class="container grid grid-3">
             <div class="card">
-                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img" src="../img/project-vintagefashion.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
+                        src="../img/project-vintagefashion.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Vintage Fashion</h2>
-            </div> 
+            </div>
             <div class="card">
-                <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><img class="project-img" src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><img class="project-img"
+                        src="../img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Rachel's Portfolio</h2>
-            </div> 
+            </div>
             <div class="card">
-                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img" src="../img/project-domimopizza.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img"
+                        src="../img/project-domimopizza.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Domimo Pizza</h2>
-            </div> 
+            </div>
             <div class="card">
-                <a href="https://github.com/xinyirachel/Simple-Note"><img class="project-img" src="../img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="https://github.com/xinyirachel/Simple-Note"><img class="project-img"
+                        src="../img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Simple Note</h2>
-            </div> 
+            </div>
             <div class="card">
-                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt=""
+                        style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Coming Soon</h2>
             </div>
             <div class="card">
-                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt="" style="width:250px;height:160px;"></a>
+                <a href="#"><img class="project-img" src="../img/project-inprogress.png" alt=""
+                        style="width:250px;height:160px;"></a>
                 <h2 class="text-left">Coming Soon</h2>
             </div>
 
 
     </section>
- 
+
 
 
     <!-- footer section -->
@@ -78,8 +89,10 @@
             <div class="social">
                 <!-- icons from fontawesome.com/ -->
                 <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
-                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i class="fa-brands fa-linkedin fa-3x"></i></i></a>
-                <a href="https://www.instagram.com/timelessummer/?hl=en"><i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i
+                        class="fa-brands fa-linkedin fa-3x"></i></i></a>
+                <a href="https://www.instagram.com/timelessummer/?hl=en"><i
+                        class="fa-brands fa-instagram fa-3x"></i></a>
             </div>
             <div>
                 <a href="../Resume.pdf" class="btn">My Resume</a>
@@ -88,5 +101,5 @@
     </footer>
 
 </body>
-</html>
 
+</html>
