--- a/src/pages/work.html
+++ b/src/pages/work.html
@@ -34,7 +34,7 @@
             <div class="introduction-text">
 
                 <p>
-                    This is a super collection of all the websites and apps I created.
+                    This is a collection of all the websites and apps I created.
                 </p>
             </div>
         </div>
