--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <div id="header" >
+
+    </div>
 
 
     <!-- navbar: menu at the top-->
@@ -23,10 +26,15 @@
             <h1 class="logo">Rachel's Portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <!-- <li><a href="./index.html">Home</a></li>
                     <li><a href="pages/work.html">Work</a></li>
-                    <li><a href="pages/contact.html">Contact</a></li>
-
+                    <li><a href="pages/contact.html">Contact</a></li> -->
+                    <li><a href="#header">&#8593;</a>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#bottom">&#8595;</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,13 +45,23 @@
 
 
     <!-- about me -->
-    <section class="about-me">
+    <section id="about" class="about-me">
         <div class="container grid">
             <div class="about-me-text">
-                <h1>I am Rachel, a web developer from Australia.</h1>
-                <p>I am interested in Code, Design and anything I can create from scratch.
-                </p>
-                <a href="pages/work.html" class="btn btn-outline">My Projects</a>
+                <h1>Hi, I am Rachel.</h1>
+                <p>I love designing and building stuff from scratch. 
+                    My interest in website development sparked by playing 
+                    with HTML and CSS to customize an blog template, and I think it is extremely interesting. 
+                    My curiosity in programming started by
+                      playing RPG Maker back in 2012 when I wanted to create
+                       my own RPG game. I copied other people's code to 
+                       customize the default game engine, and this experience taught me some 
+                       Javascript knowledge.</p>
+                <p>I'm a self-motivated learner who is able to study independently. Web development is 
+                    what I am passionate about, and I'd love to be a lifelong learner for it.</p>
+                <a href="#projects" class="btn btn-outline">Check My Projects</a>
+                <a href="./Resume.pdf" class="btn btn-outline">Download My Resume</a>
+
             </div>
             <div class="about-me-pic">
                 <img class="myphoto" src="img/myphoto.png" alt="">
@@ -58,57 +76,116 @@
 
 
     <!-- skills section-->
-    <h2 class="md text-center my-2">
-        Essential skills
-    </h2>
-    <section class="skills flex">
+    <section id="skills" class="eskills">
+        <h2 class="md text-center my-2">
+            Essential skills
+        </h2>
+        <section class="skills flex">
 
-        <div class="container flex">
+            <div class="container flex">
+                <div class="card">
+                    <img class=svg src="img/html5.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/css.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/bootstrap.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/javascript.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/react.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/materialui.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/nodejs.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/express.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/mongodb.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/ruby.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/rails.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/postgresql.svg" alt="">
+                </div>
+                <div class="card">
+                    <img class=svg src="img/git.svg" alt="">
+                </div>
+        </section>
+    </section>
+    <!-- work section -->
+    <section id="projects" class="work">
+        <div class="container grid grid-3">
             <div class="card">
-                <img class=svg src="img/html5.svg" alt="">
+                <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
+                        src="img/project-vintagefashion.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Vintage Fashion</h2>
             </div>
             <div class="card">
-                <img class=svg src="img/css.svg" alt="">
+                <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><img class="project-img"
+                        src="img/project-portfolio.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Rachel's Portfolio</h2>
             </div>
             <div class="card">
-                <img class=svg src="img/bootstrap.svg" alt="">
+                <a href="https://github.com/xinyirachel/RubyTermimalApp"><img class="project-img"
+                        src="img/project-domimopizza.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Domimo Pizza</h2>
             </div>
             <div class="card">
-                <img class=svg src="img/javascript.svg" alt="">
+                <a href="https://github.com/xinyirachel/Simple-Note"><img class="project-img"
+                        src="img/project-simple-note.png" alt="" style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Simple Note</h2>
             </div>
             <div class="card">
-                <img class=svg src="img/react.svg" alt="">
+                <a href="#"><img class="project-img" src="img/project-inprogress.png" alt=""
+                        style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Coming Soon</h2>
             </div>
             <div class="card">
-                <img class=svg src="img/materialui.svg" alt="">
+                <a href="#"><img class="project-img" src="img/project-inprogress.png" alt=""
+                        style="width:250px;height:160px;"></a>
+                <h2 class="text-left">Coming Soon</h2>
             </div>
-            <div class="card">
-                <img class=svg src="img/nodejs.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/express.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/mongodb.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/ruby.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/rails.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/postgresql.svg" alt="">
-            </div>
-            <div class="card">
-                <img class=svg src="img/git.svg" alt="">
-            </div>
+
+
     </section>
 
 
+    <!-- contact section -->
+    <section id="contact" class="contact-flex">
+        <div class="contact">
+            <div>
+                <h2 class="text-center">Leave me a message</h2>
+            </div>
+            <form action="https://formspree.io/f/xnqleadb" method="POST">
+                <div>
+                    <input type="email" name="email" placeholder="Your Email Address">
+                </div>
+
+                <div>
+                    <textarea name="message" placeholder="Your Message"></textarea>
+                </div>
+
+                <button class="btn" type="submit">Send</button>
+
+            </form>
+
+        </div>
+    </section>
 
     <!-- footer section -->
-    <footer class="footer bg-dark py-5">
+    <footer id="bottom" class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
                 <h2>Rachel's Portfolio</h2>
@@ -119,11 +196,6 @@
                 <a href="https://github.com/xinyirachel"><i class="fa-brands fa-github fa-3x"></i></a>
                 <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i
                         class="fa-brands fa-linkedin fa-3x"></i></i></a>
-                <a href="https://www.instagram.com/timelessummer/?hl=en"><i
-                        class="fa-brands fa-instagram fa-3x"></i></a>
-            </div>
-            <div>
-                <a href="./Resume.pdf" class="btn">My Resume</a>
             </div>
         </div>
     </footer>
