fix mobile layout

--- a/src/index.html
+++ b/src/index.html
@@ -27,18 +27,13 @@
                     <!-- <li><a href="./index.html">Home</a></li>
                     <li><a href="pages/work.html">Work</a></li>
                     <li><a href="pages/contact.html">Contact</a></li> -->
-                    <li><a href="#header">&#8593;</a>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#bottom">&#8595;</a></li>
                 </ul>
             </nav>
         </div>
-    </div>
-    <div id="header" >
-
     </div>
 
 
@@ -185,7 +180,7 @@
     </section>
 
     <!-- footer section -->
-    <footer id="bottom" class="footer bg-dark py-5">
+    <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
                 <h2>Rachel's Portfolio</h2>
