--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,6 @@
             <h1 class="logo">Rachel's Portfolio</h1>
             <nav>
                 <ul>
-                    <!-- <li><a href="./index.html">Home</a></li>
-                    <li><a href="pages/work.html">Work</a></li>
-                    <li><a href="pages/contact.html">Contact</a></li> -->
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -81,57 +78,62 @@
             <div class="container flex">
                 <div class="card">
                     <img class=svg src="img/html5.svg" alt="">
+                    <div>HTML</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/css.svg" alt="">
+                    <div>CSS</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/bootstrap.svg" alt="">
+                    <div>Bootstrap</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/javascript.svg" alt="">
+                    <div>Javascript</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/react.svg" alt="">
+                    <div>React</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/materialui.svg" alt="">
+                    <div>Material UI</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/nodejs.svg" alt="">
+                    <div>NodeJS</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/express.svg" alt="">
+                    <div>ExpressJS</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/mongodb.svg" alt="">
+                    <div>MongoDB</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/ruby.svg" alt="">
+                    <div>Ruby</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/rails.svg" alt="">
+                    <div>Rails</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/postgresql.svg" alt="">
+                    <div>PostgreSQL</div>
                 </div>
                 <div class="card">
                     <img class=svg src="img/git.svg" alt="">
+                    <div>Github</div>
                 </div>
         </section>
     </section>
     <!-- work section -->
     <section id="projects" class="work">
         <div class="container grid grid-3">
-            <div class="card">
-                <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-vintagefashion.png" alt=""/></a>
-                </div>
-                <div>
-                    <h2 class="text-left">Vintage Fashion</h2>
-                </div>
-            </div>
+            
 
             <div class="card">
                 <div>
@@ -140,6 +142,16 @@
                 </div>
                 <div>
                     <h2 class="text-left">Rachel's Portfolio</h2>
+                </div>
+            </div>
+
+            <div class="card">
+                <div>
+                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
+                        src="img/project-vintagefashion.png" alt=""/></a>
+                </div>
+                <div>
+                    <h2 class="text-left">Vintage Fashion</h2>
                 </div>
             </div>
 
@@ -225,7 +237,7 @@
         </div>
     </footer>
 
-
+    <script src="script/script.js"></script>
 </body>
 
 </html>
