new project-chocolate

--- a/src/index.html
+++ b/src/index.html
@@ -168,10 +168,10 @@
             <div class="card">
                 <div>
                     <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-inprogress.png" alt=""/></a>
+                        src="img/project-chocolate.png" alt=""/></a>
                 </div>
                 <div>
-                    <h2 class="text-left">Coming Soon</h2>
+                    <h2 class="text-left">Chocolate</h2>
                 </div>
             </div>
 
