--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         </section>
     </section>
     <!-- work section -->
-    <section id="projects" class="work">
+    <section id="projects" class="work bg-dark">
         <div class="container grid grid-3">
             
 
@@ -167,7 +167,7 @@
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
+                    <a href="https://github.com/xinyirachel/chocolate-moments"><img class="project-img"
                         src="img/project-chocolate.png" alt=""/></a>
                 </div>
                 <div>
