--- a/src/index.html
+++ b/src/index.html
@@ -137,65 +137,71 @@
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-portfolio.png" alt=""/></a>
+                    <img class="project-img" src="img/project-portfolio.png" alt=""/>
                 </div>
                 <div>
                     <h2 class="text-left">Rachel's Portfolio</h2>
+                    <a href="https://rachel-s-portfolio.netlify.app/index.html"><button class="btn-small">Live Demo</button></a>
+                    <a href="https://github.com/xinyirachel/Rachel-s-Portfolio"><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-vintagefashion.png" alt=""/></a>
+                    <img class="project-img" src="img/project-vintagefashion.png" alt=""/>
                 </div>
                 <div>
                     <h2 class="text-left">Vintage Fashion</h2>
+                    <a href="https://vintage-fashion.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
+                    <a href="https://github.com/xinyirachel/VintageFashion"><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-simple-note.png" alt=""/></a>
+                    <img class="project-img" src="img/project-simple-note.png" alt=""/>
                 </div>
                 <div>
                     <h2 class="text-left">Simple Note</h2>
+                    <a href="https://rachel-simple-note.netlify.app/"><button class="btn-small">Live Demo</button></a>
+                    <a href="https://github.com/xinyirachel/Simple-Note"><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/chocolate-moments"><img class="project-img"
-                        src="img/project-chocolate.png" alt=""/></a>
+                    <img class="project-img" src="img/project-chocolate.png" alt=""/>
                 </div>
                 <div>
                     <h2 class="text-left">Chocolate</h2>
+                    <a href="https://chocolatemoments.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
+                    <a href="https://github.com/xinyirachel/chocolate-moments"><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-inprogress.png" alt=""/></a>
+                    <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
                 <div>
-                    <h2 class="text-left">Coming Soon</h2>
+                    <h2 class="text-left">Cat Sitters</h2>
+                    <a href=""><button class="btn-small">Live Demo</button></a>
+                    <a href=""><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div>
-                    <a href="https://github.com/xinyirachel/VintageFashion"><img class="project-img"
-                        src="img/project-inprogress.png" alt=""/></a>
+                    <img class="project-img" src="img/project-inprogress.png" alt=""/>
                 </div>
                 <div>
-                    <h2 class="text-left">Coming Soon</h2>
+                    <h2 class="text-left">WIP</h2>
+                    <a href=""><button class="btn-small">Live Demo</button></a>
+                    <a href=""><button class="btn-small">Github</button></a>
                 </div>
             </div>
 
-
+            <!-- add project here -->
     </section>
 
 
