add bottom links

--- a/src/index.html
+++ b/src/index.html
@@ -240,6 +240,14 @@
                 <a href="https://www.linkedin.com/in/xinyi-wang-xyw/"><i
                         class="fa-brands fa-linkedin fa-3x"></i></i></a>
             </div>
+            <div>
+                <ul>
+                    <li><a href="#about" class="bottomlink">About</a></li>
+                    <li><a href="#skills" class="bottomlink">Skills</a></li>
+                    <li><a href="#projects" class="bottomlink">Projects</a></li>
+                    <li><a href="#contact" class="bottomlink">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 
