--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,10 @@
                     <img class=svg src="img/git.svg" alt="">
                     <div>Github</div>
                 </div>
+                <div class="card">
+                    <img class=svg src="img/awss3.svg" alt="">
+                    <div>AWS S3</div>
+                </div>
         </section>
     </section>
     <!-- work section -->
@@ -152,7 +156,7 @@
                 </div>
                 <div>
                     <h2 class="text-left">Vintage Fashion</h2>
-                    <a href="https://vintage-fashion.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
+                    <a href="https://vintage-fashion2.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/VintageFashion"><button class="btn-small">Github</button></a>
                 </div>
             </div>
