--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                     <img class="project-img" src="img/project-chocolate.png" alt=""/>
                 </div>
                 <div>
-                    <h2 class="text-left">Chocolate</h2>
+                    <h2 class="text-left">Todo App</h2>
                     <a href="https://chocolatemoments.herokuapp.com/"><button class="btn-small">Live Demo</button></a>
                     <a href="https://github.com/xinyirachel/chocolate-moments"><button class="btn-small">Github</button></a>
                 </div>
